feat: add URL capture to Chrome extension
  Users can now paste any URL in the extension popup to capture web pages.
  The backend fetches the page, extracts content via HTMLExtractor, and
  processes it into a knowledge capsule.

  - Added URL input field + "Capture URL" button to popup
  - Extended /api/capture/async to accept url parameter
  - Added _fetch_url() and _validate_url() to Processor
  - Added SSRF protection (blocks localhost, private IPs)
  - Added proper error handling for network failures

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -229,6 +229,58 @@
     .btn:hover .icon {
       opacity: 1;
     }
+
+    .divider {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      margin: 16px 0;
+      color: var(--text-muted);
+      font-size: 10px;
+      text-transform: uppercase;
+      letter-spacing: 0.05em;
+    }
+
+    .divider::before,
+    .divider::after {
+      content: '';
+      flex: 1;
+      height: 1px;
+      background: var(--border-subtle);
+    }
+
+    .url-section {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+
+    .url-input {
+      width: 100%;
+      padding: 12px 14px;
+      background: var(--bg-surface);
+      border: 1px solid var(--border-subtle);
+      border-radius: 6px;
+      color: var(--text-primary);
+      font-family: var(--mono);
+      font-size: 11px;
+      transition: all 0.2s ease;
+    }
+
+    .url-input:focus {
+      outline: none;
+      border-color: var(--accent-gold-dim);
+      background: var(--bg-hover);
+    }
+
+    .url-input:disabled {
+      opacity: 0.5;
+      cursor: not-allowed;
+    }
+
+    .url-input::placeholder {
+      color: var(--text-muted);
+    }
   </style>
 </head>
 <body>
@@ -258,6 +310,24 @@
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"/>
         </svg>
         Capture Full Page
+      </button>
+    </div>
+
+    <div class="divider">or capture URL</div>
+
+    <div class="url-section">
+      <input
+        type="text"
+        class="url-input"
+        id="url-input"
+        placeholder="Paste a URL to capture..."
+        disabled
+      />
+      <button class="btn btn-secondary" id="url-btn" disabled>
+        <svg class="icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1"/>
+        </svg>
+        Capture URL
       </button>
     </div>
 
